--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <title>STO</title>
-  <link href="https://fonts.googleapis.com/css?family=Abel|Amatic+SC|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amatic+SC" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="css/form.css">
   <link rel="stylesheet" type="text/css" href="fancybox/dist/jquery.fancybox.min.css?v=1488878553" media="screen">
-
-
-</head>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  
+  </head>
 
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="fancybox/dist/jquery.fancybox.min.js?v=1488878553"></script>
   <script src="js/index.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
   <div class="navigation">
     <ul>
-      <li><a href="index.html">Головна</a></li>
-      <li><a href="#ab">Про нас</a></li>
+      <li><a href="index.html"><span class="glyphicon glyphicon-home"></span> Головна</a></li>
+      <li><a href="#ab"><span class="glyphicon glyphicon-user"></span> Про нас</a></li>
       <li id="logo">Ремонт вантажних автомобілів</li>
-      <li><a href="#serv">Послуги</a></li>
-      <li><a href="#cont">Контакти</a></li>
+      <li><a href="#serv"><span class="glyphicon glyphicon-wrench"></span> Послуги</a></li>
+      <li><a href="#cont"><span class="glyphicon glyphicon-phone"></span> Контакти</a></li>
     </ul>
   </div>
 
@@ -87,7 +88,7 @@
     <div id="form" class="form">
 
       <h6>Написати нам:</h6>
-      <form>
+      <form method="POST" action="https://formspree.io/itb25@ukr.net">
         <input type="text" name="field1" placeholder="Ваше ім'я" />
         <input type="tel" name="field2" placeholder="Номер телефону" />
         <input type="email" name="field3" placeholder="Email" />
