--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="css/form.css">
   <link rel="stylesheet" type="text/css" href="fancybox/dist/jquery.fancybox.min.css?v=1488878553" media="screen">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   
   </head>
 
@@ -78,7 +78,7 @@
     <div>
 
       <ul>
-        <li><a href="#form" class="openform , orange">Написати нам:</a></li>
+        <li><a href="#form" class="openform , orange"><span class="glyphicon glyphicon-envelope"></span> Написати нам:</a></li>
       </ul>
 
 
