--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="UTF-8">
   <title>STO</title>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amatic+SC" />
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="css/form.css">
   <link rel="stylesheet" type="text/css" href="fancybox/dist/jquery.fancybox.min.css?v=1488878553" media="screen">
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-
 </head>
 
 <body>
