--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="phc">
     <h1 id="cont">Контакти</h1>
     <div class="ph">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d909.7861484324051!2d23.970756842450495!3d49.83750023741039!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473addf56a1818cf%3A0xf010fa6f48a7b7cd!2z0LLRg9C70LjRhtGPINCd0LjQt9C40L3QvdCwLCA3NdCQLCDQm9GM0LLRltCyLCDQm9GM0LLRltCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsINCj0LrRgNCw0ZfQvdCw!5e0!3m2!1suk!2sua!4v1488983594566"></iframe>
+      <iframe style="pointer-events:none;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d909.7861484324051!2d23.970756842450495!3d49.83750023741039!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473addf56a1818cf%3A0xf010fa6f48a7b7cd!2z0LLRg9C70LjRhtGPINCd0LjQt9C40L3QvdCwLCA3NdCQLCDQm9GM0LLRltCyLCDQm9GM0LLRltCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsINCj0LrRgNCw0ZfQvdCw!5e0!3m2!1suk!2sua!4v1488983594566"></iframe>
     </div>
 
     <div>
