--- a/index.html
+++ b/index.html
@@ -39,20 +39,24 @@
     <div class="service">
       <img src="img/paccardv.jpg" alt="engine">
       <h3>Ремонт двигунів</h3>
+      <p>Наше СТО проводить ремонт двигунів вантажних автомобілів наступних марок: Mercedes, Volvo, DAF, MAN, Scania ,Renault. Ціна ремонту двигуна залежатиме як від марки авто, так і від складності поломки.</p>
     </div>
 
     <div class="service">
       <img src="img/gb.jpg" alt="gearbox">
       <h3>Ремонт КПП</h3>
+      <p>Наше СТО здійснює ремонт коробок перемикання передач, всіх типів і моделей іноземного виробництва.</p>
     </div>
     <div class="service">
       <img src="img/sachs.jpg" alt="zf">
       <h3>Ремонт корзини зчеплення </h3>
+      <p>Наше СТО здійснює ремонт корзини зчеплення вантажних автомобілів іноземного виробництва.</p>
     </div>
 
     <div class="service">
       <img src="img/cdp.jpg" alt="autocom">
       <h3>Діагностика систем та вузлів вантажівки </h3>
+      <p>Без сучасної комп'ютерної діаностики ремонт не можливий. Ми діагностуємо будь-які вантажні автомобілі іноземного виробництва. </p>
     </div>
   </div>
 
