--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
   <meta charset="UTF-8">
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="services">
-    <h3 id="serv" class="blue">Послуги</h3>
+    <h3 id="serv" class="blue"><span class="glyphicon glyphicon-wrench"></span> Послуги</h3>
     <div class="service">
       <img src="img/paccardv.jpg" alt="engine">
       <h3>Ремонт двигунів</h3>
@@ -61,7 +61,7 @@
   </div>
 
   <div class="aboutus">
-    <h1 id="ab">Про нас</h1>
+    <h1 id="ab"><span class="glyphicon glyphicon-user"></span> Про нас</h1>
     <div class="about">
     </div>
     <h5>Адреса: м. Львів вул. Низинна 75А,</h5>
@@ -73,7 +73,7 @@
   </div>
 
   <div class="phc">
-    <h1 id="cont">Контакти</h1>
+    <h1 id="cont"><span class="glyphicon glyphicon-phone"></span> Контакти</h1>
     <div class="ph">
       <iframe style="pointer-events:none;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d909.7861484324051!2d23.970756842450495!3d49.83750023741039!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473addf56a1818cf%3A0xf010fa6f48a7b7cd!2z0LLRg9C70LjRhtGPINCd0LjQt9C40L3QvdCwLCA3NdCQLCDQm9GM0LLRltCyLCDQm9GM0LLRltCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsINCj0LrRgNCw0ZfQvdCw!5e0!3m2!1suk!2sua!4v1488983594566"></iframe>
     </div>
